<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".fragmentos.BuscadorJuegos">

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/buscar"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_min="200dp"
        tools:ignore="LabelFor" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/boton_buscar"
        android:minHeight="48dp"
        android:src="@android:drawable/ic_search_category_default"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintStart_toEndOf="@+id/editTextText"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@+id/separador1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        tools:listitem="@layout/juego_reciclable" />

    <TextView
        android:id="@+id/id_txtJuegos"
        style="@style/BotonJuegos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/juegos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/id_txtbuscador"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/separador1"
        android:layout_width="5dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/id_txtbuscador"
        app:layout_constraintStart_toEndOf="@+id/id_txtJuegos" />
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/separador2"
        app:layout_constraintStart_toEndOf="@+id/separador1"
        app:layout_constraintTop_toTopOf="@+id/separador2" />
    <TextView
        android:id="@+id/id_txtbuscador"
        style="@style/BotonBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscador"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/separador2"
        android:layout_width="5dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/id_txtFavoritos"
        app:layout_constraintStart_toEndOf="@+id/id_txtbuscador" />

    <TextView
        android:id="@+id/id_txtFavoritos"
        style="@style/BotonFavoritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/favoritos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_txtbuscador" />
</androidx.constraintlayout.widget.ConstraintLayout>
