<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".fragmentos.Favoritos">

    <TextView
        android:id="@+id/textView4"
        style="@style/Titulos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/favoritos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_txtJuegos"
        style="@style/BarraMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/juegos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/id_txtbuscador"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/separador1"
        android:layout_width="5dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/id_txtbuscador"
        app:layout_constraintStart_toEndOf="@+id/id_txtJuegos" />

    <TextView
        android:id="@+id/id_txtbuscador"
        style="@style/BarraMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscador"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/separador2"
        android:layout_width="5dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/id_txtFavoritos"
        app:layout_constraintStart_toEndOf="@+id/id_txtbuscador" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/cardview_dark_background"
        app:layout_constraintStart_toEndOf="@id/separador2"
        app:layout_constraintTop_toTopOf="@+id/separador2" />

    <TextView
        android:id="@+id/id_txtFavoritos"
        style="@style/BarraMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/favoritos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_txtbuscador" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/separador1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:listitem="@layout/juego_reciclable" />
</androidx.constraintlayout.widget.ConstraintLayout>