<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".fragmentos.DetalleJuego">

    <ImageView
        android:id="@+id/id_star2"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="5dp"
        android:src="@android:drawable/btn_star"
        app:layout_constraintStart_toEndOf="@+id/id_star1"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <ImageView
        android:id="@+id/id_image_caratula"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/imagen_del_juego"
        android:src="@android:drawable/ic_menu_gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/id_game_title"
        style="@style/Titulos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/txt_nombre_del_juego"
        app:layout_constraintStart_toEndOf="@+id/id_image_caratula"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        style="@style/Subtitulos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="Año de lanzamiento"
        app:layout_constraintStart_toEndOf="@+id/id_image_caratula"
        app:layout_constraintTop_toBottomOf="@+id/id_game_title" />

    <TextView
        android:id="@+id/id_anio"
        style="@style/Subtitulos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="año"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/id_game_title" />

    <TextView
        android:id="@+id/textView10"
        style="@style/Subtitulos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Categoria"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/id_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="categoria"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/id_anio"
        app:layout_constraintTop_toBottomOf="@+id/id_anio" />

    <TextView
        android:id="@+id/desarrollador"
        style="@style/Subtitulos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Desarrollador"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView15"
        style="@style/Subtitulos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="desarrollador"
        app:layout_constraintStart_toStartOf="@+id/id_categoria"
        app:layout_constraintTop_toBottomOf="@+id/id_categoria" />

    <TextView
        android:id="@+id/textView14"
        style="@style/Subtitulos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Puntuación"
        app:layout_constraintStart_toStartOf="@+id/desarrollador"
        app:layout_constraintTop_toBottomOf="@+id/desarrollador" />

    <ImageView
        android:id="@+id/id_star1"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="5dp"
        android:src="@android:drawable/btn_star"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="5dp"
        android:src="@android:drawable/btn_star"
        app:layout_constraintStart_toEndOf="@+id/id_star2"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="5dp"
        android:src="@android:drawable/btn_star"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="5dp"
        android:src="@android:drawable/btn_star"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_marginTop="5dp"
        android:src="@android:drawable/ic_menu_share"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <TextView
        android:id="@+id/textView16"
        style="@style/Subtitulos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Compartir"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_marginEnd="10dp"
        android:src="?android:attr/galleryItemBackground"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="20sp"
        android:layout_height="20sp"
        android:layout_marginEnd="-5dp"
        android:layout_marginBottom="-5dp"
        android:src="@android:drawable/ic_menu_share"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="@+id/imageView9" />

    <TextView
        android:id="@+id/txt_descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Descripción"
        app:layout_constraintStart_toStartOf="@+id/id_image_caratula"
        app:layout_constraintTop_toBottomOf="@+id/id_image_caratula" />

    <TextView
        android:id="@+id/id_descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="contenido de la descripcion"
        app:layout_constraintStart_toStartOf="@+id/txt_descripcion"
        app:layout_constraintTop_toBottomOf="@+id/txt_descripcion" />

    <View
        android:id="@+id/separador1"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_descripcion" />

    <TextView
        android:id="@+id/txt_galeria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="Galeria"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separador1" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toTopOf="@+id/separador3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_galeria"
        tools:ignore="SpeakableTextPresentCheck"
        tools:listitem="@layout/imagen_reciclable" />

    <TextView
        android:id="@+id/id_txtJuegos"
        style="@style/BarraMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/juegos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/id_txtbuscador"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/separador3"
        android:layout_width="5dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/id_txtbuscador"
        app:layout_constraintStart_toEndOf="@+id/id_txtJuegos" />

    <TextView
        android:id="@+id/id_txtbuscador"
        style="@style/BarraMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscador"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/separador2"
        android:layout_width="5dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/id_txtFavoritos"
        app:layout_constraintStart_toEndOf="@+id/id_txtbuscador" />

    <TextView
        android:id="@+id/id_txtFavoritos"
        style="@style/BarraMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/favoritos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_txtbuscador" />
</androidx.constraintlayout.widget.ConstraintLayout>